[package]
name = "pki-chain"
version = "0.1.0"
edition = "2021"
authors = ["jessethepro"]
description = "Blockchain-backed PKI certificate authority with interactive TUI, Protocol layer abstraction, and complete three-tier CA hierarchy (Root → Intermediate → User)"
repository = "https://github.com/jessethepro/pki-chain"
license = "MIT"
keywords = ["pki", "blockchain", "certificate", "x509", "ca"]
categories = ["cryptography", "authentication"]


[dependencies]
libblockchain = { git = "https://github.com/jessethepro/libblockchain.git" }
anyhow = "1.0"
secrecy = { version = "0.8", features = ["serde"] }
rpassword = "7.3"
hex = "0.4.3"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
cursive = "0.21"
zeroize = "1.8.2"
toml = "0.9.10"
keyutils = "0.4.0"
tar = "0.4.44"
