[package]
name = "pki-chain"
version = "0.1.0"
edition = "2021"
authors = ["jessethepro"]
description = "Blockchain-backed PKI certificate authority with interactive TUI, Protocol layer abstraction, and complete three-tier CA hierarchy (Root → Intermediate → User)"
repository = "https://github.com/jessethepro/pki-chain"
license = "MIT"
keywords = ["pki", "blockchain", "certificate", "x509", "ca"]
categories = ["cryptography", "authentication"]


[dependencies]
libblockchain = { git = "https://github.com/jessethepro/libblockchain.git" }
anyhow = "1.0"
secrecy = { version = "0.10", features = ["serde"] }
rpassword = "7.3"
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0", features = ["derive"] }
zeroize = "1.8.2"
toml = "0.9.10"
keyutils = "0.4.0"
tar = "0.4.44"
axum = "0.8.8"
tower-http = { version = "0.6.8", features = ["fs"] }
tokio = { version = "1.48.0", features = ["rt-multi-thread", "macros"] }
axum-server = { version = "0.8.0", features = ["tls-rustls"] }

[dev-dependencies]
tempfile = "3.0"
